--- a/services.html
+++ b/services.html
@@ -5,102 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>核心业务 - 海南皓众人力</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <style>
-        .services-tabs {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-bottom: 40px;
-            border-bottom: 2px solid var(--text-light);
-            padding-bottom: 20px;
-        }
-
-        .tab-btn {
-            padding: 10px 20px;
-            cursor: pointer;
-            font-weight: bold;
-            color: var(--text-medium);
-            border-radius: 30px;
-            transition: all 0.3s ease;
-        }
-
-        .tab-btn.active, .tab-btn:hover {
-            background-color: var(--primary-color);
-            color: var(--white);
-        }
-
-        .tab-content {
-            display: none;
-            animation: fadeIn 0.5s ease;
-        }
-
-        .tab-content.active {
-            display: block;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .service-detail-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 30px;
-            margin-top: 30px;
-        }
-
-        .service-sub-module h4 {
-            color: var(--primary-color);
-            margin-bottom: 15px;
-            display: flex;
-            align-items: center;
-        }
-        .service-sub-module h4 i { margin-right: 10px; }
-
-        .process-steps {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-            text-align: center;
-        }
-        .step-item { flex: 1; position: relative; }
-        .step-item::after {
-            content: '→';
-            position: absolute;
-            right: -10px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: var(--text-light);
-            font-size: 24px;
-        }
-        .step-item:last-child::after { content: none; }
-
-        @media (max-width: 768px) {
-            .service-detail-grid { grid-template-columns: 1fr; }
-            .process-steps { flex-direction: column; gap: 15px; }
-            .step-item::after { content: '↓'; right: 50%; top: auto; bottom: -20px; transform: translateX(50%); }
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/pages/services.css">
 </head>
 <body>
+    <!-- Header -->
     <header class="header">
         <div class="container">
-             <a href="index.html" class="logo">
-                <i class="fas fa-users-cog"></i>
-                <span>皓众人力</span>
+            <a href="index.html" class="logo">
+                <img src="assets/images/logo/logo.png" alt="皓众人力 Logo">
+                <span>皓众人力<small style="font-size: 10px; display: block; line-height: 1;">HAO ZHONG REN LI</small></span>
             </a>
-             <div class="mobile-toggle"><i class="fas fa-bars"></i></div>
-             <nav>
+            <div class="mobile-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+            <nav>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">首页</a></li>
                     <li><a href="about.html" class="nav-link">关于我们</a></li>
                     <li><a href="services.html" class="nav-link active">核心业务</a></li>
+                    <li><a href="cases.html" class="nav-link">服务案例</a></li>
+                    <li><a href="qualifications.html" class="nav-link">资质荣誉</a></li>
+                    <li><a href="partners.html" class="nav-link">合作伙伴</a></li>
+                    <li><a href="news.html" class="nav-link">新闻动态</a></li>
                     <li><a href="contact.html" class="nav-link">联系我们</a></li>
-                    </ul>
+                </ul>
             </nav>
+            <div class="header-actions">
+                <a href="contact.html" class="btn btn-secondary btn-sm">立即咨询</a>
+                <a href="contact.html#demand-form" class="btn btn-outline-primary btn-sm" style="border: 1px solid var(--primary-color);">需求申报</a>
+            </div>
         </div>
     </header>
 
@@ -166,31 +100,45 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">
-        <div class="container" style="text-align: center; color: #D1D5DB;">
-            <p>©2025 海南皓众人力资源服务有限公司 版权所有</p>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <h2>皓众人力</h2>
+                    <p>自贸港全链条人力服务商</p>
+                </div>
+                <div class="footer-links">
+                    <h4>快速链接</h4>
+                    <ul>
+                        <li><a href="about.html">关于我们</a></li>
+                        <li><a href="services.html">核心业务</a></li>
+                        <li><a href="qualifications.html">资质荣誉</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h4>联系方式</h4>
+                    <p><i class="fas fa-phone"></i> 0898-6678-1105</p>
+                    <p class="email-address"><i class="fas fa-envelope"></i> hhhzrlzy@163.com</p>
+                </div>
+                <div class="footer-compliance">
+                    <h4>合规展示</h4>
+                    <p>人力资源服务许可证</p>
+                    <p>营业执照</p>
+                </div>
+                <div style="text-align: center;">
+                     <h4 class="wechat-title">关注皓众公众号</h4>
+                     <img src="assets/images/QRcode/gongzhonghao.png" alt="微信公众号二维码" class="qrcode-img">
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a></p>
+            </div>
         </div>
     </footer>
     
-    <script src="assets/js/main.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const tabBtns = document.querySelectorAll('.tab-btn');
-            const tabContents = document.querySelectorAll('.tab-content');
-
-            tabBtns.forEach(btn => {
-                btn.addEventListener('click', () => {
-                    // 移除所有 active 状态
-                    tabBtns.forEach(b => b.classList.remove('active'));
-                    tabContents.forEach(c => c.classList.remove('active'));
-
-                    // 添加当前 active 状态
-                    btn.classList.add('active');
-                    const targetId = btn.getAttribute('data-target');
-                    document.getElementById(targetId).classList.add('active');
-                });
-            });
-        });
-    </script>
+    <script src="assets/js/global.js"></script>
+    <script src="assets/js/pages/services-logic.js"></script>
 </body>
 </html>
