--- a/contact.html
+++ b/contact.html
@@ -5,97 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>联系我们 - 海南皓众人力</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <style>
-        .contact-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 60px;
-        }
-        
-        .contact-info-cards {
-            display: grid;
-            gap: 20px;
-        }
-
-        .contact-card {
-            display: flex;
-            align-items: flex-start;
-        }
-        .contact-card i {
-            font-size: 24px;
-            color: var(--primary-color);
-            margin-right: 20px;
-            margin-top: 5px;
-        }
-
-        /* 表单样式 */
-        .contact-form .form-group {
-            margin-bottom: 20px;
-        }
-        .contact-form label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: bold;
-            color: var(--text-dark);
-        }
-        .contact-form input,
-        .contact-form select,
-        .contact-form textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid var(--text-light);
-            border-radius: 4px;
-            background-color: #f9fafb;
-            transition: all 0.3s ease;
-        }
-        .contact-form input:focus,
-        .contact-form select:focus,
-        .contact-form textarea:focus {
-            border-color: var(--primary-color);
-            outline: none;
-            background-color: var(--white);
-        }
-
-        /* FAQ 样式 */
-        .faq-item {
-            margin-bottom: 15px;
-            border: 1px solid var(--text-light);
-            border-radius: var(--border-radius);
-            overflow: hidden;
-        }
-        .faq-question {
-            padding: 15px 20px;
-            background-color: #f9fafb;
-            cursor: pointer;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-weight: bold;
-            color: var(--text-dark);
-        }
-        .faq-answer {
-            padding: 0 20px;
-            max-height: 0;
-            overflow: hidden;
-            transition: all 0.3s ease;
-            background-color: var(--white);
-        }
-        .faq-item.active .faq-answer {
-            padding: 20px;
-            max-height: 200px; /* 根据内容调整 */
-        }
-        .faq-item.active .faq-question i {
-            transform: rotate(180deg);
-        }
-
-        @media (max-width: 768px) {
-            .contact-grid { grid-template-columns: 1fr; gap: 40px; }
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/pages/contact.css">
 </head>
 <body>
-    <header class="header"><div class="container"><a href="index.html" class="logo">皓众人力</a></div></header>
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="assets/images/logo/logo.png" alt="皓众人力 Logo">
+                <span>皓众人力<small style="font-size: 10px; display: block; line-height: 1;">HAO ZHONG REN LI</small></span>
+            </a>
+            <div class="mobile-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+            <nav>
+                <ul class="nav-menu">
+                    <li><a href="index.html" class="nav-link">首页</a></li>
+                    <li><a href="about.html" class="nav-link">关于我们</a></li>
+                    <li><a href="services.html" class="nav-link">核心业务</a></li>
+                    <li><a href="cases.html" class="nav-link">服务案例</a></li>
+                    <li><a href="qualifications.html" class="nav-link">资质荣誉</a></li>
+                    <li><a href="partners.html" class="nav-link">合作伙伴</a></li>
+                    <li><a href="news.html" class="nav-link">新闻动态</a></li>
+                    <li><a href="contact.html" class="nav-link active">联系我们</a></li>
+                </ul>
+            </nav>
+            <div class="header-actions">
+                <a href="contact.html" class="btn btn-secondary btn-sm">立即咨询</a>
+                <a href="contact.html#demand-form" class="btn btn-outline-primary btn-sm" style="border: 1px solid var(--primary-color);">需求申报</a>
+            </div>
+        </div>
+    </header>
 
     <main style="padding-top: var(--header-height-desktop);">
         <section class="section" style="background: var(--primary-color); color: white; padding: 60px 0;">
@@ -195,9 +136,45 @@
         </section>
     </main>
 
-    <footer class="footer"><div class="container" style="text-align: center; color: #D1D5DB;"><p>©2025 海南皓众人力资源服务有限公司</p></div></footer>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <h2>皓众人力</h2>
+                    <p>自贸港全链条人力服务商</p>
+                </div>
+                <div class="footer-links">
+                    <h4>快速链接</h4>
+                    <ul>
+                        <li><a href="about.html">关于我们</a></li>
+                        <li><a href="services.html">核心业务</a></li>
+                        <li><a href="qualifications.html">资质荣誉</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h4>联系方式</h4>
+                    <p><i class="fas fa-phone"></i> 0898-6678-1105</p>
+                    <p class="email-address"><i class="fas fa-envelope"></i> hhhzrlzy@163.com</p>
+                </div>
+                <div class="footer-compliance">
+                    <h4>合规展示</h4>
+                    <p>人力资源服务许可证</p>
+                    <p>营业执照</p>
+                </div>
+                <div style="text-align: center;">
+                     <h4 class="wechat-title">关注皓众公众号</h4>
+                     <img src="assets/images/QRcode/gongzhonghao.png" alt="微信公众号二维码" class="qrcode-img">
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a></p>
+            </div>
+        </div>
+    </footer>
     
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/global.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // FAQ 折叠面板
