--- a/qualifications.html
+++ b/qualifications.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>资质荣誉 - 企业实力展示</title>
-    <link rel="stylesheet" href="assets/css/qualifications.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/pages/qualifications.css">
 </head>
 <body>
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="assets/images/logo/logo.png" alt="皓众人力 Logo">
+                <span>皓众人力<small style="font-size: 10px; display: block; line-height: 1;">HAO ZHONG REN LI</small></span>
+            </a>
+            <div class="mobile-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+            <nav>
+                <ul class="nav-menu">
+                    <li><a href="index.html" class="nav-link">首页</a></li>
+                    <li><a href="about.html" class="nav-link">关于我们</a></li>
+                    <li><a href="services.html" class="nav-link">核心业务</a></li>
+                    <li><a href="cases.html" class="nav-link">服务案例</a></li>
+                    <li><a href="qualifications.html" class="nav-link active">资质荣誉</a></li>
+                    <li><a href="partners.html" class="nav-link">合作伙伴</a></li>
+                    <li><a href="news.html" class="nav-link">新闻动态</a></li>
+                    <li><a href="contact.html" class="nav-link">联系我们</a></li>
+                </ul>
+            </nav>
+            <div class="header-actions">
+                <a href="contact.html" class="btn btn-secondary btn-sm">立即咨询</a>
+                <a href="contact.html#demand-form" class="btn btn-outline-primary btn-sm" style="border: 1px solid var(--primary-color);">需求申报</a>
+            </div>
+        </div>
+    </header>
 
     <div class="container">
         <header class="page-header">
@@ -34,6 +63,45 @@
         <div class="caption" id="caption"></div>
     </div>
 
-    <script src="assets/js/qualifications.js"></script>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <h2>皓众人力</h2>
+                    <p>自贸港全链条人力服务商</p>
+                </div>
+                <div class="footer-links">
+                    <h4>快速链接</h4>
+                    <ul>
+                        <li><a href="about.html">关于我们</a></li>
+                        <li><a href="services.html">核心业务</a></li>
+                        <li><a href="qualifications.html">资质荣誉</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h4>联系方式</h4>
+                    <p><i class="fas fa-phone"></i> 0898-6678-1105</p>
+                    <p class="email-address"><i class="fas fa-envelope"></i> hhhzrlzy@163.com</p>
+                </div>
+                <div class="footer-compliance">
+                    <h4>合规展示</h4>
+                    <p>人力资源服务许可证</p>
+                    <p>营业执照</p>
+                </div>
+                <div style="text-align: center;">
+                     <h4 class="wechat-title">关注皓众公众号</h4>
+                     <img src="assets/images/QRcode/gongzhonghao.png" alt="微信公众号二维码" class="qrcode-img">
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a></p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="assets/js/global.js"></script>
+    <script src="assets/js/pages/qualifications-logic.js"></script>
 </body>
 </html>
