--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 <p>我们的愿景是成为<strong>“自贸港人才生态运营商”</strong>，通过专业服务链接企业与人才，赋能组织高效增长。</p>
                 
                 <div style="margin-top: 30px;">
-                    <span style="font-size: 32px; font-weight: bold; color: var(--primary-color);">6+</span> 年深耕
+                    <span style="font-size: 32px; font-weight: bold; color: var(--primary-color);">8+</span> 年深耕
                     <span style="margin: 0 20px; color: #ddd;">|</span>
                     <span style="font-size: 32px; font-weight: bold; color: var(--primary-color);">100%</span> 双资质认证
                 </div>
@@ -75,12 +75,13 @@
                     <i class="fas fa-gem"></i>
                     <h3>核心价值观</h3>
                     <p>不骗人 · 不贪心 · 不偷懒</p>
-                    <p style="font-size: 13px; margin-top: 10px; color: #6B7280;">诚信为本，脚踏实地，拒绝投机取巧</p>
+                    <p style="font-size: 13px; margin-top: 10px; color: #6B7280;">No deception, no greed, no sloth</p>
                 </div>
                 <div class="culture-item">
                     <i class="fas fa-hand-holding-heart"></i>
                     <h3>经营使命</h3>
                     <p>以利他之心，成为每一个客户最信赖的人力资源伙伴</p>
+                    <p style="font-size: 13px; margin-top: 10px; color: #6B7280;">Altruistic at heart, your most trusted HR partner</p>
                 </div>
                 <div class="culture-item">
                     <i class="fas fa-seedling"></i>
@@ -150,45 +151,21 @@
         </div>
     </section>
 
-    <section class="section org-section">
+    <section class="section gallery-section-new">
         <div class="container">
-            <div class="org-header">
-                <h2 class="section-title">组织架构与生态</h2>
-                <p>集团化运作，多元化布局，全方位满足企业需求</p>
+            <div class="gallery-header-centered">
+                <h2 class="section-title">风采展示</h2>
+                <p class="section-subtitle">记录精彩瞬间，感受皓众温度</p>
+            </div>
+
+            <div class="gallery-tabs-new">
+                <button class="gallery-tab-btn active" data-target="culture">企业文化</button>
+                <button class="gallery-tab-btn" data-target="care">员工关怀</button>
             </div>
             
-            <div class="org-tree-grid">
-                <div class="org-card main-node">
-                    <i class="fas fa-network-wired" style="font-size: 40px; margin-bottom: 10px;"></i>
-                    <h3>皓众企服中心</h3>
-                    <p style="font-size: 14px; opacity: 0.9;">集团核心 · 战略指挥 · 资源调度</p>
-                </div>
-
-                <div class="org-card">
-                    <i class="fas fa-photo-video org-icon"></i>
-                    <h4>文化传媒公司</h4>
-                    <p class="text-sm text-gray-500">新媒体宣传、品牌营销、活动策划</p>
-                </div>
-                <div class="org-card">
-                    <i class="fas fa-laptop-code org-icon"></i>
-                    <h4>数字科技公司</h4>
-                    <p class="text-sm text-gray-500">用工平台研发、数据中台建设</p>
-                </div>
-                <div class="org-card">
-                    <i class="fas fa-gifts org-icon"></i>
-                    <h4>礼品定制公司</h4>
-                    <p class="text-sm text-gray-500">员工关爱礼品、商务礼品全场景定制</p>
-                </div>
-                <div class="org-card">
-                    <i class="fas fa-user-graduate org-icon"></i>
-                    <h4>职业教育研究院</h4>
-                    <p class="text-sm text-gray-500">产教融合、学历提升、技能培训</p>
-                </div>
-                <div class="org-card">
-                    <i class="fas fa-chart-line org-icon"></i>
-                    <h4>企业管理咨询公司</h4>
-                    <p class="text-sm text-gray-500">组织变革、薪酬绩效、制度优化</p>
-                </div>
+            <div class="gallery-stage">
+                <div class="gallery-wrap active" id="culture-grid"></div>
+                <div class="gallery-wrap" id="care-grid"></div>
             </div>
         </div>
     </section>
@@ -213,6 +190,7 @@
                 <div class="footer-contact">
                     <h4>联系方式</h4>
                     <p><i class="fas fa-phone"></i> 0898-6678-1105</p>
+                    <p><span style="visibility: hidden;"><i class="fas fa-phone"></i></span> 0898-6585-3306</p>
                     <p class="email-address"><i class="fas fa-envelope"></i> hhhzrlzy@163.com</p>
                 </div>
                 <div class="footer-compliance">
@@ -226,11 +204,12 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a></p>
+                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a> | <a href="disclaimer.html">版权声明</a></p>
             </div>
         </div>
     </footer>
 
     <script src="assets/js/global.js"></script>
+    <script src="assets/js/pages/about.js"></script>
 </body>
 </html>
