--- a/cases.html
+++ b/cases.html
@@ -42,13 +42,15 @@
         </div>
     </header>
 
-    <main style="padding-top: 80px;"> <section style="background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%); color: white; padding: 80px 0;">
-            <div class="container">
-                <h1 style="font-size: 36px; margin-bottom: 15px; font-weight: 700;color: aliceblue;">成功案例</h1>
-                <p style="font-size: 18px;">专业铸就品质，实力成就信赖</p>
+    <main style="padding-top: var(--header-height-desktop);">
+        <section class="section hero-section" style="position: relative; padding: 100px 0; text-align: left;">
+            <div class="background-container" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('assets/images/backgroundimgs/cases_bg.jpg'); background-size: cover; background-position: center;"></div>
+            <div class="background-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 48, 135, 0.4);"></div>
+            <div class="container" style="position: relative; z-index: 1; color: white;">
+                <h1 style="font-size: 2.5rem; margin-bottom: 10px; color: white; font-weight: 700; line-height: 1.2;">成功案例</h1>
+                <p style="font-size: 1.1rem; max-width: 900px; margin: 0; line-height: 1.5; color: white;">专业铸就品质，实力成就信赖</p>
             </div>
         </section>
-        
 
         <section class="cases-section">
             <div class="container">
@@ -82,6 +84,7 @@
                 <div class="footer-contact">
                     <h4>联系方式</h4>
                     <p><i class="fas fa-phone"></i> 0898-6678-1105</p>
+                    <p><span style="visibility: hidden;"><i class="fas fa-phone"></i></span> 0898-6585-3306</p>
                     <p class="email-address"><i class="fas fa-envelope"></i> hhhzrlzy@163.com</p>
                 </div>
                 <div class="footer-compliance">
@@ -95,7 +98,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a></p>
+                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a> | <a href="disclaimer.html">版权声明</a></p>
             </div>
         </div>
     </footer>
