--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <section class="hero-banner">
         <div class="container hero-content">
-            <h1>自贸港全链条人力服务商</h1>
-            <h2>劳务派遣 · 企业外包 · 招聘猎头 · 会议会展 · 外籍人才服务 一站式解决方案</h2>
+            <h1>自贸港全链条人力资源服务商</h1>
+            <h2>管理咨询、招聘猎头、劳务派遣与企业外包、培训与学术会议、会议会展、考试考务、外籍人才服务、员工关怀定制的一站式解决方案</h2>
             <p class="hero-stats">500+企事业单位合作 | 98%客户满意度 | 合规赋能企业高效增长</p>
             <div class="hero-btns">
                 <a href="services.html" class="btn btn-primary">查看服务方案</a>
@@ -92,10 +92,7 @@
                     <i class="fas fa-user-clock"></i>
                     <h3 class="module-title">灵活用工平台</h3>
                 </div>
-                 <div class="card biz-card">
-                    <i class="fas fa-globe-asia"></i>
-                    <h3 class="module-title">跨境人才服务中心</h3>
-                </div>
+                <div class="card biz-card"><i class="fas fa-file-contract"></i><h3 class="module-title">标书撰写服务</h3></div>
                 <div class="card biz-card"><i class="fas fa-brain"></i><h3 class="module-title">调研与智库服务</h3></div>
                 <div class="card biz-card"><i class="fas fa-user-friends"></i><h3 class="module-title">劳务用工服务</h3></div>
                 <div class="card biz-card"><i class="fas fa-search-dollar"></i><h3 class="module-title">招聘猎头服务</h3></div>
@@ -114,7 +111,7 @@
         <div class="container">
             <h2 class="section-title">实力见证与核心数据</h2>
             <div style="text-align: center; margin-bottom: 40px; font-style: italic;">
-                “皓众的招聘解决方案帮我们3个月完成100人核心团队搭建。” —— 某新能源企业HRD
+                “皓众的招聘解决方案帮我们3个月完成100人核心团队搭建。” —— 某企业客户HRD
             </div>
             <div class="data-grid">
                 <div class="card">
@@ -169,6 +166,7 @@
                 <div class="footer-contact">
                     <h4>联系方式</h4>
                     <p><i class="fas fa-phone"></i> 0898-6678-1105</p>
+                    <p><span style="visibility: hidden;"><i class="fas fa-phone"></i></span> 0898-6585-3306</p>
                     <p class="email-address"><i class="fas fa-envelope"></i> hhhzrlzy@163.com</p>
                 </div>
                 <div class="footer-compliance">
@@ -182,7 +180,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a></p>
+                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a> | <a href="disclaimer.html">版权声明</a></p>
             </div>
         </div>
     </footer>
