--- a/qualifications.html
+++ b/qualifications.html
@@ -37,31 +37,19 @@
             </div>
         </div>
     </header>
+    <br>
+    <br>
+    <br>
+    <br>
 
-    <div class="container">
-        <header class="page-header">
+    <div class="qualifications-container">
+        <header class="qualifications-header">
             <h1>资质荣誉</h1>
-            <p class="subtitle">专业铸就品质，实力赢得信赖</p>
-            <div class="divider"></div>
+            <p>深耕人力资源领域，以专业实力与合规经营赢得认可</p>
         </header>
-
-        <nav class="filter-nav">
-            <button class="filter-btn active" data-filter="all">全部</button>
-            <button class="filter-btn" data-filter="certification">体系认证 (3)</button>
-            <button class="filter-btn" data-filter="copyright">软件著作 (11)</button>
-            <button class="filter-btn" data-filter="honor">企业荣誉 (17)</button>
-            <button class="filter-btn" data-filter="patent">专利证书 (4)</button>
-        </nav>
-
-        <div class="gallery-grid" id="galleryGrid">
-            </div>
+        <div class="cert-static-grid" id="certGrid"></div>
     </div>
 
-    <div class="lightbox" id="lightbox">
-        <span class="close-btn">&times;</span>
-        <img class="lightbox-content" id="lightbox-img">
-        <div class="caption" id="caption"></div>
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
@@ -83,6 +71,7 @@
                 <div class="footer-contact">
                     <h4>联系方式</h4>
                     <p><i class="fas fa-phone"></i> 0898-6678-1105</p>
+                    <p><span style="visibility: hidden;"><i class="fas fa-phone"></i></span> 0898-6585-3306</p>
                     <p class="email-address"><i class="fas fa-envelope"></i> hhhzrlzy@163.com</p>
                 </div>
                 <div class="footer-compliance">
@@ -96,7 +85,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a></p>
+                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a> | <a href="disclaimer.html">版权声明</a></p>
             </div>
         </div>
     </footer>
