--- a/contact.html
+++ b/contact.html
@@ -39,104 +39,71 @@
     </header>
 
     <main style="padding-top: var(--header-height-desktop);">
-        <section class="section" style="background: var(--primary-color); color: white; padding: 60px 0;">
-            <div class="container">
-                <h1 class="section-title" style="color: white; text-align: left; margin-bottom: 10px;">联系我们</h1>
-                <p>12小时极速响应，为您提供专业人力资源解决方案</p>
+        <section class="section hero-section" style="position: relative; padding: 100px 0; text-align: center;">
+            <div class="background-container" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('assets/images/backgroundimgs/contact_bg.jpg'); background-size: cover; background-position: center;"></div>
+            <div class="background-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 48, 135, 0.6);"></div>
+            <div class="container" style="position: relative; z-index: 1; color: white;">
+                <h1 style="font-size: 2.5rem; margin-bottom: 20px; color: white;">与专业的服务团队取得联系</h1>
+                <p style="font-size: 1.1rem; max-width: 900px; margin: 0 auto; line-height: 1.8; color: white;">
+                    无论您是企业寻求合作，还是人才咨询政策，我们都将在12小时内为您提供精准答复。
+                </p>
             </div>
         </section>
 
         <section class="section">
-            <div class="container contact-grid">
-                <div>
-                    <h2 class="module-title" style="margin-bottom: 30px;">联系方式</h2>
-                    <div class="contact-info-cards">
-                        <div class="card contact-card">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div>
-                                <h4>海口总部</h4>
-                                <p>海南省海口市龙华区金宇街道坡博四横路154号11层</p>
+            <div class="container contact-wrapper">
+                
+                <aside class="contact-sidebar">
+                    <div class="info-group">
+                        <h3>咨询热线</h3>
+                        <div class="phone-box">
+                            <div class="phone-item">
+                                <i class="fas fa-headset"></i>
+                                <div>
+                                    <small>业务咨询热线</small>
+                                    <strong>0898-6678-1105</strong><br>
+                                    <strong>0898-6585-3306</strong>
+                                </div>
                             </div>
                         </div>
-                        <div class="card contact-card">
-                            <i class="fas fa-building"></i>
-                            <div>
-                                <h4>三亚分公司</h4>
-                                <p>三亚市吉阳区吉阳大道218号天豪万琉汇5层505室</p>
-                            </div>
-                        </div>
-                        <div class="card contact-card">
-                            <i class="fas fa-phone-volume"></i>
-                            <div>
-                                <h4>联系电话 & 邮箱</h4>
-                                <p>0898-6678-1105<br>hhhzrlzy@163.com</p>
-                            </div>
+                    </div>
+
+                    <div class="info-group">
+                        <h3>办公地址</h3>
+                        <ul class="address-list">
+                            <li><i class="fas fa-map-marker-alt" style="margin-right: 8px; color: #e53e3e;"></i><strong>海口总部：</strong>海南省海口市龙华区金宇街道坡博四横路154号11层</li>
+                            <li><i class="fas fa-building" style="margin-right: 8px; color: #1a56db;"></i><strong>三亚分公司：</strong>三亚市吉阳区吉阳大道218号天豪万琉汇5层505室</li>
+                            <li><i class="fas fa-building" style="margin-right: 8px; color: #1a56db;"></i><strong>澄迈分公司：</strong>澄迈县老城镇融创美伦熙语一期9栋1001</li>
+                            <li><i class="fas fa-building" style="margin-right: 8px; color: #1a56db;"></i><strong>东方分公司：</strong>海南省东方市八所镇大占坡社区大道东路31号2号铺面</li>
+                        </ul>
+                    </div>
+
+                    <div class="info-group">
+                        <h3>电子邮箱</h3>
+                        <p class="email-text"><i class="far fa-envelope"></i> hhhzrlzy@163.com</p>
+                    </div>
+                </aside>
+
+                <div class="contact-form-area" id="demand-form">
+                    <div class="form-card">
+                        <div class="iframe-box">
+                            <iframe 
+                                id="idy_frame" 
+                                title="需求申报表单"
+                                src="https://wj.qq.com/s2/25315456/f17a/" 
+                                frameborder="0" 
+                                allowfullscreen 
+                                sandbox="allow-same-origin allow-scripts allow-modals allow-downloads allow-forms allow-popups">
+                            </iframe>
                         </div>
                     </div>
                 </div>
 
-                <div id="demand-form">
-                    <div class="card">
-                        <h2 class="module-title" style="text-align: center;">需求申报</h2>
-                        <form class="contact-form" id="contactForm">
-                            <div class="form-group">
-                                <label for="company">企业名称 <span style="color:red">*</span></label>
-                                <input type="text" id="company" required>
-                            </div>
-                            <div class="form-group" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
-                                <div>
-                                    <label for="contact-person">联系人 <span style="color:red">*</span></label>
-                                    <input type="text" id="contact-person" required>
-                                </div>
-                                <div>
-                                    <label for="phone">联系电话 <span style="color:red">*</span></label>
-                                    <input type="tel" id="phone" required>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="service-type">需求类型</label>
-                                <select id="service-type">
-                                    <option>请选择...</option>
-                                    <option>劳务派遣/外包服务</option>
-                                    <option>招聘猎头服务</option>
-                                    <option>管理咨询服务</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="message">需求描述</label>
-                                <textarea id="message" rows="4"></textarea>
-                            </div>
-                            <div style="text-align: center;">
-                                <button type="submit" class="btn btn-primary" style="width: 100%;">提交需求</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section" style="background-color: #f9fafb;">
-            <div class="container">
-                <h2 class="section-title">常见问题 (FAQ)</h2>
-                <div style="max-width: 800px; margin: 0 auto;">
-                    <div class="faq-item">
-                        <div class="faq-question">劳务派遣与岗位外包的合规区别是什么？ <i class="fas fa-chevron-down"></i></div>
-                        <div class="faq-answer"><p>（此处填充具体答案...）</p></div>
-                    </div>
-                    <div class="faq-item">
-                        <div class="faq-question">招聘服务的周期一般是多久？ <i class="fas fa-chevron-down"></i></div>
-                        <div class="faq-answer"><p>（此处填充具体答案...）</p></div>
-                    </div>
-                    <div class="faq-item">
-                        <div class="faq-question">海南自贸港企业可享受哪些人才补贴政策？ <i class="fas fa-chevron-down"></i></div>
-                        <div class="faq-answer"><p>（此处填充具体答案...）</p></div>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
+        <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -156,6 +123,7 @@
                 <div class="footer-contact">
                     <h4>联系方式</h4>
                     <p><i class="fas fa-phone"></i> 0898-6678-1105</p>
+                    <p><span style="visibility: hidden;"><i class="fas fa-phone"></i></span> 0898-6585-3306</p>
                     <p class="email-address"><i class="fas fa-envelope"></i> hhhzrlzy@163.com</p>
                 </div>
                 <div class="footer-compliance">
@@ -169,40 +137,9 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a></p>
+                <p>©2025 海南皓众人力资源服务有限公司 版权所有 | <a href="#">隐私政策</a> | <a href="#">服务条款</a> | <a href="disclaimer.html">版权声明</a></p>
             </div>
         </div>
     </footer>
-    
-    <script src="assets/js/global.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // FAQ 折叠面板
-            const faqItems = document.querySelectorAll('.faq-item');
-            faqItems.forEach(item => {
-                item.querySelector('.faq-question').addEventListener('click', () => {
-                    item.classList.toggle('active');
-                });
-            });
-
-            // 简单的表单提交模拟
-            const form = document.getElementById('contactForm');
-            form.addEventListener('submit', function(e) {
-                e.preventDefault();
-                const btn = form.querySelector('button[type="submit"]');
-                const originalText = btn.innerText;
-                btn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> 提交中...';
-                btn.disabled = true;
-
-                // 模拟请求
-                setTimeout(() => {
-                    alert('需求提交成功，我们将在12小时内与您联系！');
-                    form.reset();
-                    btn.innerText = originalText;
-                    btn.disabled = false;
-                }, 1500);
-            });
-        });
-    </script>
 </body>
 </html>
