--- a/disclaimer.html
+++ b/disclaimer.html
@@ -46,6 +46,7 @@
                 <h1 style="font-size: 2.5rem; margin-bottom: 20px; color: white;">版权声明</h1>
                 <p style="font-size: 1.1rem; max-width: 900px; margin: 0 auto; line-height: 1.8; color: white;">
                     本网站部分图片来源于 Pixabay 平台，该平台素材均采用 Pixabay Content License 授权，可免费用于个人及商业用途，无需额外授权。
+                    部分图片来自Photo by Jose Losada on Unsplash。
                 </p>
             </div>
         </section>
