--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@
                 <p>我们的愿景是成为<strong>“自贸港人才生态运营商”</strong>，通过专业服务链接企业与人才，赋能组织高效增长。</p>
                 
                 <div style="margin-top: 30px;">
-                    <span style="font-size: 32px; font-weight: bold; color: var(--primary-color);">8+</span> 年深耕
+                    <span style="font-size: 32px; font-weight: bold; color: var(--primary-color);">成立后</span> 皓众持续深耕人力资源服务
                     <span style="margin: 0 20px; color: #ddd;">|</span>
-                    <span style="font-size: 32px; font-weight: bold; color: var(--primary-color);">100%</span> 双资质认证
+                    <span style="font-size: 32px; font-weight: bold; color: var(--primary-color); white-space: nowrap;">100%</span><span style="white-space: nowrap;"> 双资质认证</span>
                 </div>
             </div>
             <div class="intro-img">
